🚸 propagate access denied errors to the UI
#2304